<resources>
    <string name="app_name">First Android App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="airline_name">Enter the Airline Name</string>
    <string name="submit">Submit</string>
    <string name="flight_number">Enter the Flight Number</string>
    <string name="source">Enter source code</string>
    <string name="departure">Enter departure date time</string>
    <string name="destination">Enter destination code</string>
    <string name="arrival">Enter arrival date time</string>
</resources>
